[package]
name = "rustfrc"
version = "1.1.3"
edition = "2021"

[lib]
name = "rustfrc"
crate-type = ["cdylib"]

[dependencies]
numpy = "~0.21"
ndarray = { version = "~0.15", features = ["rayon"] }
ndarray-rand = "~0.14"
num-complex = "~0.4.5"
num-traits = "~0.2.18"

[dependencies.pyo3]
version = "~0.21.1"
features = ["extension-module", "gil-refs"]

[package.metadata.maturin]
python-source = "python"
