[project]
name = "rustfrc"
version = "1.1.0"
description = "Fast utility functions useful for Fourier Ring/Shell Correlation: binom_split, pois_gen, square_abs."
readme = "README.md"
requires-python = ">= 3.7"
license = {text = "Apache-2.0"}
authors = [
  {email = "T.M.tenBrink@student.tudelft.nl"},
  {name = "Tip ten Brink"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
  "numpy >= 1.18, < 2"
]

[tool.poetry]
name = "rustfrc"
version = "1.1.0"
description = "Fast utility functions useful for Fourier Ring/Shell Correlation: binomial splitting of arrays."
authors = ["Tip ten Brink <T.M.tenBrink@student.tudelft.nl>"]

[tool.poetry.dependencies]
python = ">= 3.7"
numpy = ">= 1.18, < 2"

[tool.poetry.dev-dependencies]
maturin = "^0.11.3"
pytest = "^6.2.5"

[build-system]
requires = ["maturin >= 0.11, < 0.12"]
build-backend ="maturin"
