[project]
name = "rustfrc"
version = "1.1.4"
description = "Fast utility functions useful for Fourier Ring/Shell Correlation: binom_split, pois_gen, square_abs."
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = {text = "Apache-2.0"}
authors = [
  {email = "T.M.tenBrink@student.tudelft.nl"},
  {name = "Tip ten Brink"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
  "numpy >= 1.18, < 2"
]

[project.urls]
Source = "https://github.com/tmtenbrink/rustfrc"

[tool.poetry]
name = "rustfrc"
version = "1.1.4"
description = "Fast utility functions useful for Fourier Ring/Shell Correlation: binomial splitting of arrays."
authors = ["Tip ten Brink <T.M.tenBrink@student.tudelft.nl>"]

[tool.poetry.dependencies]
python = ">= 3.9, <3.13"
numpy = "^1.26"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[tool.maturin]
python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend ="maturin"
